fix: body 요소의 overflow 속성을 hidden으로 설정

--- a/www/src/view/page.image-one.scss
+++ b/www/src/view/page.image-one.scss
@@ -1,4 +1,5 @@
 body {
+  overflow: hidden;
   > main {
     position: fixed;
     top: 0;
